--- a/css/j-pdf.less
+++ b/css/j-pdf.less
@@ -40,6 +40,7 @@
         border-radius: 30px;
         font-size: 14px;
         font-weight: normal;
+        cursor: pointer;
     }
 
     &-block {
